dolfin/ass02/nat.tf
resource "aws_eip" "nat_eip" {
  domain =              "vpc"
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id =       aws_eip.nat_eip.id
  subnet_id =           aws_subnet.public_subnet.id
}
